		clears [individual] translation pages.
20100213	Working on dyntrans abort peculiarities (in the middle of
		delay-slots, etc).
20100214	Preparing for a quick 0.6.0 release.

==============  RELEASE 0.6.0  ==============

20100214	Fixing order of machine.html and components.html generation,
		relative to individual machines from skeleton files.
20100220	Improve install path guessing (DESTDIR and MANDIR) based on
		feedback from Tom Callaway.
		Moving the multiple identical instances of parse_number and
		SplitStringIntoVector to a new StringHelper class, and adding
		some unit tests.
		Adding a PluginDescriptor class, for parsing plugin descriptor
		strings (component:plugin(args):filename etc).
		Beginning on the new plugin mechanism: adding an 'attach'
		command, to be used instead of 'load'.
20100222	Scrapping the "plugin" concept; the already existing component
		framework should hopefully be enough as it is.
20100314	Updating doc/translation.html with more examples on how the
		dyntrans system works (in pre-0.6.x and in 0.6.x).
20100319	Fixing flawed mymkstemp by also passing O_CREAT | O_EXCL (used
		on systems without mkstemp) (reported as Debian bug #574537).
20100322	const fixes, enabling builds using GCC's -Wcast-qual.
		Fixes to allow build using GCC's -Wshadow.
20100326	Running 'make test' will now treat memory leaks as test
		failure (in debug builds only). Also fixing a memory leak.
20100406	Bogus hack to machine_evbmips.cc to let RTEMS print some boot
		messages (again?) for mvme5500.
20100806	nbjoerg on #GXemul (FreeNode) noticed an easy way to trigger
		an unhandled case in memory_sh.cc; applying a potential fix.
20100830	Updating the OpenBSD/landisk guest operating system install
		instructions from 4.6 to 4.7.
		Improved the "pretty print" of components in the tree dump,
		by moving it out to a per-component virtual function.
20100901	Beginning on CacheComponent (a generic memory cache component).
